--- a/lifeCoach.html
+++ b/lifeCoach.html
@@ -39,33 +39,28 @@
 				</div>
 			</div>
 		</div>
-		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	    	<a class="navbar-brand" href="index.html">Life<span>coach</span></a>
-	    	<form action="#" class="searchform order-sm-start order-lg-last">
-          <div class="form-group d-flex">
-            <input type="text" class="form-control pl-3" placeholder="Search">
-            <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
-          </div>
-        </form>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="fa fa-bars"></span> Menu
-	      </button>
-		  <div class="collapse navbar-collapse" id="navbarCollapse">
+		<nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+            <h1 class="m-0">FOLK</h1>
+        </a>
+        <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="home.html" class="nav-item nav-link active">Home</a>
+                <a href="home.html" class="nav-item nav-link ">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="residency.html" class="nav-item nav-link">Residency</a>
                 <a href="clubs.html" class="nav-item nav-link">Clubs</a>
-                <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                 <a href="lifeCoach.html" class="nav-item nav-link">Life Coach</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <form action="https://rzp.io/l/FOLKResidency">
-                <input type="submit" value="Donate Now" class="button">
-              </form>
+<button class="donate-button">Donate
+</button>              </form>
         </div>
-	  </nav>
+    </nav>
     <!-- END nav -->
     <div class="hero-wrap">
 	    <div class="home-slider owl-carousel">
