--- a/about.html
+++ b/about.html
@@ -73,8 +73,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="home.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="home.html" class="nav-item nav-link ">Home</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
                 <a href="residency.html" class="nav-item nav-link">Residency</a>
                 <a href="clubs.html" class="nav-item nav-link">Clubs</a>
                 <a href="gallery.html" class="nav-item nav-link">Gallery</a>
@@ -145,7 +145,7 @@
                             <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita</span>
                         </div>
                     </div>
-                    <a class="btn btn-secondary rounded-pill py-3 px-5" href="">Explore More</a>
+                    <a class="btn btn-secondary rounded-pill py-3 px-5" href="home.html#services">Explore More</a>
                 </div>
             </div>
         </div>
