--- a/clubs.html
+++ b/clubs.html
@@ -74,10 +74,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="home.html" class="nav-item nav-link active">Home</a>
+                <a href="home.html" class="nav-item nav-link ">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="residency.html" class="nav-item nav-link">Residency</a>
-                <a href="clubs.html" class="nav-item nav-link">Clubs</a>
+                <a href="clubs.html" class="nav-item nav-link active">Clubs</a>
                 <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                 <a href="lifeCoach.html" class="nav-item nav-link">Life Coach</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -94,16 +94,47 @@
 
 
         <!-- Services Start -->
-        <div class="container-fluid service py-5">
-            <div class="container py-5">
-                <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
-                    <div class="sub-style">
-                        <h4 class="sub-title px-3 mb-0">What We Do</h4>
-                    </div>
-                    <h1 class="display-3 mb-4">Our Service Given Physio Therapy By Expert.</h1>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
-                </div>
-                <div class="row g-4 justify-content-center">
+        <div class="container-fluid  px-0 mx-0">
+            <div class="container-fluid px-0 mx-0  py-3 my-3">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/carousel-1.png" class="d-block w-100" alt="...">
+	  <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img/carousel-2.png" class="d-block w-100" alt="...">
+	  <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img/carousel-1.png" class="d-block w-100" alt="...">
+	  <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div></div></div>
+                <div class="row g-4 clubs-service justify-content-center">
                     <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                         <div class="clubs-service-item rounded">
                            <div class="clubs-service-img rounded-top">
@@ -123,7 +154,7 @@
                            <div class="clubs-service-img rounded-top">
                                 <img src="img/service-club-1.png" class="img-fluid rounded-top w-100" alt="">
                            </div>
-                            <div class="service-content rounded-bottom bg-light p-4">
+                            <div class="clubs-service-content rounded-bottom bg-light p-4">
                                 <div class="clubs-service-content-inner">
                                     <h5 class="mb-4">Perfect Harmony</h5>
                                     <p class="mb-4">The Perfect Harmony Club is dedicated to preserving and promoting the art of traditional music instruments within the Hare Krishna Golden Temple's folk program.</p>
