--- a/residency.html
+++ b/residency.html
@@ -74,9 +74,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="home.html" class="nav-item nav-link active">Home</a>
+                <a href="home.html" class="nav-item nav-link ">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="residency.html" class="nav-item nav-link">Residency</a>
+                <a href="residency.html" class="nav-item nav-link active">Residency</a>
                 <a href="clubs.html" class="nav-item nav-link">Clubs</a>
                 <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                 <a href="lifeCoach.html" class="nav-item nav-link">Life Coach</a>
