--- a/gallery.html
+++ b/gallery.html
@@ -300,16 +300,16 @@
                     <div class="row g-3">
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/project-5.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-5.jpg" data-lightbox="project">
+                                <img class="img-fluid" src="img/service_gallery-1.jpg" alt="">
+                                <a class="project-title h5 mb-0" href="img/service_gallery-1.jpg" data-lightbox="project">
                                     TRIPS
                                 </a>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/project-1.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-1.jpg" data-lightbox="project">
+                                <img class="img-fluid" src="img/service_gallery-7.jpg" alt="">
+                                <a class="project-title h5 mb-0" href="service_gallery-7.jpg" data-lightbox="project">
                                     Events
                                 </a>
                             </div>
@@ -320,16 +320,16 @@
                     <div class="row g-3">
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/project-2.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-2.jpg" data-lightbox="project">
+                                <img class="img-fluid" src="img/service_gallery-3.jpg" alt="">
+                                <a class="project-title h5 mb-0" href="img/service_gallery-3.jpg" data-lightbox="project">
                                     Mango Mania
                                 </a>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/project-6.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-6.jpg" data-lightbox="project">
+                                <img class="img-fluid" src="img/service_gallery-4.jpg" alt="">
+                                <a class="project-title h5 mb-0" href="img/service_gallery-4.jpg" data-lightbox="project">
                                     Explosion
                                 </a>
                             </div>
@@ -340,8 +340,8 @@
                     <div class="row g-3">
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/project-7.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-7.jpg" data-lightbox="project">
+                                <img class="img-fluid" src="img/service_gallery-6.jpg" alt="">
+                                <a class="project-title h5 mb-0" href="img/service_gallery-6.jpg" data-lightbox="project">
                                     Janmastami
                                 </a>
                             </div>
@@ -368,8 +368,8 @@
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/project-8.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-8.jpg" data-lightbox="project">
+                                <img class="img-fluid" src="img/service_gallery-8.jpg" alt="">
+                                <a class="project-title h5 mb-0" href="img/service_gallery-8.jpg" data-lightbox="project">
                                     Volunteer
                                 </a>
                             </div>
@@ -393,14 +393,14 @@
                 <div class="row g-0 flex-sm-row">
                     <div class="col-sm-6">
                         <div class="team-img position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/team-1.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="h-100 p-5 d-flex flex-column justify-content-between">
                             <div class="mb-3">
-                                <h4>Lucifer Jhones</h4>
-                                <span>Photographer</span>
+                                <h4>Sahadeva Sakha Dasa</h4>
+                                <span>Associate Vice President</span>
                             </div>
                             <p>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo</p>
                             <div class="d-flex">
@@ -416,14 +416,14 @@
                 <div class="row g-0 flex-sm-row-reverse flex-lg-row">
                     <div class="col-sm-6">
                         <div class="team-img position-relative">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid" src="img/team-2.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="h-100 p-5 d-flex flex-column justify-content-between">
                             <div class="mb-3">
-                                <h4>Jesse Joslin</h4>
-                                <span>Videographer</span>
+                                <h4>Pradyamuna Krishna Dasa</h4>
+                                <span>Divisional Head</span>
                             </div>
                             <p>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo</p>
                             <div class="d-flex">
@@ -439,14 +439,14 @@
                 <div class="row g-0 flex-lg-row-reverse">
                     <div class="col-sm-6">
                         <div class="team-img position-relative">
-                            <img class="img-fluid" src="img/team-3.jpg" alt="">
+                            <img class="img-fluid" src="img/team-3.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="h-100 p-5 d-flex flex-column justify-content-between">
                             <div class="mb-3">
-                                <h4>Richard Archer</h4>
-                                <span>Retoucher</span>
+                                <h4>Braj Bandu Dasa</h4>
+                                <span>Unit Head</span>
                             </div>
                             <p>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo</p>
                             <div class="d-flex">
@@ -462,14 +462,14 @@
                 <div class="row g-0 flex-sm-row-reverse">
                     <div class="col-sm-6">
                         <div class="team-img position-relative">
-                            <img class="img-fluid" src="img/team-4.jpg" alt="">
+                            <img class="img-fluid" src="img/team-1.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="h-100 p-5 d-flex flex-column justify-content-between">
                             <div class="mb-3">
-                                <h4>April Ryan</h4>
-                                <span>Editor</span>
+                                <h4>Venkadri Govinda Dasa</h4>
+                                <span>Unit Head</span>
                             </div>
                             <p>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo</p>
                             <div class="d-flex">
